load-tests/insert/deployment/mssql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  selector:
    matchLabels:
      app: mssql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mssql
        logs: "true"
    spec:
      containers:
        - name: mssql-serverz
          image: mcr.microsoft.com/mssql/server:2019-latest
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "sleep 30; /opt/mssql-tools/bin/sqlcmd -l 30 -S localhost -U sa -P Test123# -e -i /data/init.sql; wait" ]
          ports:
            - containerPort: 1443
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /data
      volumes:
        - name: init-script
          persistentVolumeClaim:
            claimName: init-script-pvc
        - name: data
          persistentVolumeClaim:
            claimName: mssql-data-pvc
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  labels:
    app: mssql-server
spec:
  type: NodePort
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
  selector:
    app: mssql
---
## TODO: remove
apiVersion: v1
kind: Service
metadata:
  name: mssql-deployment
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
---
